# demoexam-template

./: .env  .gitignore  pyproject.toml
apps/core/: settings.py
apps/users/models/: user.py
