[tool.poetry]
name = "exam1"
version = "0.1.0"
description = ""
authors = ["Maxim Sytdikov <maxim.sytdikov@saritasa.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.1"
django-extensions = "^3.2.3"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
